Update banner section: fix button class, add app store and play store images, and adjust layout for better alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -130,7 +130,7 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-.banner .container .content h4 {
+.banner .container .content > h4 {
   font-family: var(--font-family);
   font-weight: 600;
   font-size: 14px;
@@ -164,4 +164,5 @@ img {
 }
 .banner .container .content .banner_button {
   margin: 64px 0px;
+  gap: 8px;
 }
